--- a/WebForm/WebForm.csproj
+++ b/WebForm/WebForm.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="PasswordGenerator.aspx" />
+    <Content Include="Screenshot\Screenshot.png" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
